crates/kul-core/tests/snapshots/export__example_02_nuclear_family_with_positions.snap
---
source: crates/kul-core/tests/export.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "graph": {
    "persons": [
      {
        "id": "alice",
        "name": "Alice Sharma",
        "gender": "female",
        "born": {
          "value": "1950-04-12",
          "precision": "day",
          "circa": false
        },
        "span": [
          184,
          249
        ]
      },
      {
        "id": "bob",
        "name": "Bob Sharma",
        "gender": "male",
        "born": {
          "value": "1948-11-30",
          "precision": "day",
          "circa": false
        },
        "span": [
          250,
          315
        ]
      },
      {
        "id": "carol",
        "name": "Carol Sharma",
        "gender": "female",
        "born": {
          "value": "1975-09-03",
          "precision": "day",
          "circa": false
        },
        "span": [
          316,
          401
        ]
      }
    ],
    "marriages": [
      {
        "id": "m_alice_bob",
        "spouses": [
          "alice",
          "bob"
        ],
        "start": {
          "value": "1972-05-12",
          "precision": "day",
          "circa": false
        },
        "span": [
          403,
          451
        ]
      }
    ],
    "parenthoodLinks": [
      {
        "marriageId": "m_alice_bob",
        "childId": "carol",
        "kind": "biological",
        "span": [
          384,
          401
        ]
      }
    ]
  }
}
